--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,20 @@
   border: none;
   font-size: 1.2rem;
 }
+
+.banner  {
+   display: grid;
+   place-items: center;
+}
+
+.news-card {
+    width: 300px;
+    height: 200px;
+    background-color: red;
+    margin-left: 40px;
+}
+
+.news .news-card img {
+    width: 100%;
+    height: 120px;
+}
