--- a/styles.css
+++ b/styles.css
@@ -132,13 +132,14 @@
   margin-top: 100px;
   width: 600px;
   height: 200px;
-  background-color:#8d0801;
+  background-color: #8d0801;
   color: #eaf4f4;
   padding-top: 20px;
   display: none;
 }
 
-.logout-box h2, .logout-text{
+.logout-box h2,
+.logout-text {
   text-align: center;
 }
 
@@ -162,19 +163,101 @@
   font-size: 1.2rem;
 }
 
-.banner  {
-   display: grid;
-   place-items: center;
+.banner {
+  display: grid;
+  place-items: center;
+}
+
+.banner img {
+  height: 190px;
+}
+
+hr {
+  margin-top: 10px;
+}
+.news {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 10px;
 }
 
 .news-card {
-    width: 300px;
-    height: 200px;
-    background-color: red;
-    margin-left: 40px;
+  width: 280px;
+  height: 320px;
+  border: 2px solid #eaf4f4;
+}
+
+.news-card:hover {
+  box-shadow: 5px 5px 5px #cce3de;
 }
 
 .news .news-card img {
-    width: 100%;
-    height: 120px;
+  width: 100%;
+  height: 150px;
+}
+
+.news .news-card h3,
+p {
+  padding: 0 20px;
+}
+
+.news .news-card p {
+  font-size: 0.9rem;
+}
+
+.news-heading {
+  text-align: center;
+  text-decoration: underline;
+  color: #8d0801;
+}
+
+.videos-card {
+  width: 600px;
+  height: 330px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 40px 20px;
+}
+
+.videos {
+  display: flex;
+  justify-content: space-evenly;
+  height: 190vh;
+}
+
+#video1 {
+  background: url("https://icdn.strettynews.com/wp-content/uploads/2021/02/bruno-rash-770x513.jpg");
+  background-size: 700px;
+}
+
+#video2 {
+  background: url("https://icdn.strettynews.com/wp-content/uploads/2021/02/bruno-rash-770x513.jpg");
+  background-size: 700px;
+}
+
+.video-btn {
+  width: 60px;
+  background-color: rgb(230, 12, 12);
+  height: 60px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  margin: 10px 0;
+}
+
+.videos-card h3 {
+  text-transform: uppercase;
+  color: #eaf4f4;
+  font-size: 2rem;
+  line-height: 1;
+}
+
+#video1:hover {
+  background-size: 750px;
+}
+
+#video2:hover {
+  background-size: 750px;
 }
