--- a/styles/squad.css
+++ b/styles/squad.css
@@ -170,3 +170,63 @@ body {
   border: none;
   font-size: 1.2rem;
 }
+
+.player-category ul {
+  display: flex;
+  list-style: none;
+  width: 500px;
+  height: 10vh;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.player-category a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: gray;
+  font-weight: 500;
+}
+
+.player-category a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+#active-player {
+  color: black;
+  text-decoration: underline;
+}
+
+.heading {
+  margin-left: 22px;
+  text-transform: uppercase;
+}
+
+.goalkeeper-card {
+  width: 400px;
+  height: 400px;
+  background-color: red;
+}
+
+.goalkeeper-card img {
+  width: 400px;
+  height: 400px;
+}
+
+.goalkeeper-info {
+  position: relative;
+  bottom: 33%;
+  color: #eaf4f4;
+  padding-left: 20px;
+  width: 36%;
+}
+
+.goalkeeper-info h2 {
+  font-size: 2rem;
+  font-family: "Roboto";
+}
+
+.goalkeeper-info p {
+  font-weight: 700;
+  font-size: 1.3rem;
+}
